--- a/finance/static/ngTemplates/app.finance.pettyCash.details.html
+++ b/finance/static/ngTemplates/app.finance.pettyCash.details.html
@@ -8,19 +8,28 @@
 <div class="modal-body">
   <div class="container-fluid">
     <div class="row well" ng-repeat="ex in expensesData" style="border-bottom:2px solid #eee;padding:0px;margin-bottom:10px">
-      <div class="col-md-12">
-        <div class="col-md-9">
-          <h3>{{ex.heading.title}}</h3>
-          <strong style="font-size:17px">Account Details</strong>
-          <ul>
-            <li><strong><i class="fa fa-university"></i> </strong><span style="font-size:17px">{{ex.account.bank}}</span></li>
-            <li><strong><i class="fa fa-credit-card"></i> </strong><span style="font-size:17px">{{ex.account.number}}</span></li>
-          </ul>
-          <span>{{ex.description}}</span>
+      <div class="col-md-12" style="padding:0px;padding-top:10px">
+        <div class="col-md-1 text-right">
+          <img ng-src="{{ex.createdUser | getDP}}" class="img img-rounded" style="height:50px;width:50px">
         </div>
-        <div class="col-md-3 text-right">
-          <h2 style="color:#b1afaf"> <i class="fa fa-inr"></i> {{ex.amount | number}} </h2>
-          <img ng-src="{{ex.attachment}}" class="pull-right" width="250" />
+        <div class="col-md-2 text-muted" style="font-size:22px;padding-left:0px">
+          <span>{{ex.createdUser | getName}}</span><br>
+          <span><i class="fa fa-calendar"></i> {{ex.created | date : "dd-MMM-yyyy"}}</span><br>
+          <span style="color:#ec6464"><i class="fa fa-inr fa-lg"></i> {{ex.amount | number}}</span>
+        </div>
+        <div class="col-md-9" style="border-left:2px solid #eee">
+          <h3>{{ex.heading.title}}</h3>
+          <div class="col-md-9">
+            <strong style="font-size:17px">Account Details</strong>
+            <ul>
+              <li><strong><i class="fa fa-university"></i> </strong><span style="font-size:17px">{{ex.account.bank}}</span></li>
+              <li><strong><i class="fa fa-credit-card"></i> </strong><span style="font-size:17px">{{ex.account.number}}</span></li>
+            </ul>
+            <span>{{ex.description}}</span>
+          </div>
+          <div class="col-md-3 text-right">
+            <img ng-src="{{ex.attachment}}" class="pull-right" width="250" />
+          </div>
         </div>
       </div>
       <hr>
